FreeST/test/Programs/ValidTests/Functional/fEqg/fEqg.fst
g : Int -> Int
g x = x

f : Int -> Int
f = g

main : Int
main = f 5
